--- a/.github/workflows/Padavan_CI_MI-MINI.yml
+++ b/.github/workflows/Padavan_CI_MI-MINI.yml
@@ -3,13 +3,13 @@
 #      
 # # # # # # # # # # #
 name: Padavan CI MI-MINI
-on: 
-  release:
-    types: [published]
+#on: 
+#  release:
+#    types: [published]
 
-  push:
-    branches: 
-      - master
+#  push:
+#    branches: 
+#      - master
 
 #  schedule:
 #    - cron: 0 19 * * *
