--- a/.github/workflows/Padavan_CI_K2P.yml
+++ b/.github/workflows/Padavan_CI_K2P.yml
@@ -7,9 +7,9 @@ name: Padavan CI K2P
 #  release:
 #    types: [published]
 
-#  push:
-#    branches: 
-#      - master
+ push:
+   branches: 
+     - master
 
 #  schedule:
 #    - cron: 0 19 * * *
